--- a/public/style.css
+++ b/public/style.css
@@ -140,7 +140,7 @@ ul {
 
 .chatArea {
   height: 100%;
-  padding-bottom: 60px;
+  padding-bottom: 20%;
 }
 
 .messages {
@@ -167,7 +167,7 @@ ul {
 .inputMessage {
   border: 10px solid #000;
   bottom: 0;
-  height: 60px;
+  height: 20%;
   left: 0;
   outline: none;
   padding-left: 10px;
