--- a/public/style.css
+++ b/public/style.css
@@ -53,12 +53,10 @@ ul {
 }
 
 .login.page .form {
-  height: 100px;
-  margin-top: -100px;
-  position: absolute;
-
+  padding-top: 30%;
   text-align: center;
-  top: 50%;
+  position: absolute;
+  margin-top: -20%;
   width: 100%;
 }
 
@@ -68,22 +66,25 @@ ul {
   border-bottom: 2px solid #fff;
   outline: none;
   padding-bottom: 15px;
+  height: 50%
   text-align: center;
+  margin-left: 30%;
+  float: left;
   width: 400px;
 }
 
 .login.page .title {
-  font-size: 200%;
+  font-size: 5em;
 }
 
 .login.page .usernameInput {
-  font-size: 200%;
+  font-size: 4em;
   letter-spacing: 3px;
 }
 
 .login.page .title, .login.page .usernameInput {
   color: #fff;
-  font-weight: 100;
+  font-weight: 300;
 }
 
 .enterb {
@@ -98,9 +99,14 @@ ul {
   border-radius: 0px;
   font-family: Arial;
   color: #ffffff;
-  font-size: 23px;
-  padding: 10px 20px 10px 20px;
+  padding: 11px 0px 15px 0px;
+  text-align: center;
   text-decoration: none;
+  height: 10%;
+  width: 30%;
+  font-size: 4em;
+  float: left;
+  position: relative;
 }
 
 .enterb:hover {
@@ -122,11 +128,11 @@ ul {
 /* Font */
 
 .messages {
-  font-size: 150%;
+  font-size: 4em;
 }
 
 .inputMessage {
-  font-size: 100%;
+  font-size: 4em;
 }
 
 .log {
@@ -140,7 +146,6 @@ ul {
 
 .chatArea {
   height: 100%;
-  padding-bottom: 20%;
 }
 
 .messages {
@@ -167,11 +172,11 @@ ul {
 .inputMessage {
   border: 10px solid #000;
   bottom: 0;
-  height: 20%;
+  height: 10%;
   left: 0;
   outline: none;
   padding-left: 10px;
-  position: absolute;
+  float: left;
   right: 0;
-  width: 100%;
+  width: 70%;
 }
